Upd: prevent overflow of output buttons #775 Upd: rearrange outputs dropup #775

--- a/htdocs/css/mympd.css
+++ b/htdocs/css/mympd.css
@@ -1103,3 +1103,7 @@ input.innerButton {
   max-height: 12rem;
   overflow-y: auto;
 }
+
+form#outputs {
+  overflow: auto;
+}
